<resources>
    <string name="app_name">Tip Time</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="okay_service">Okay (15%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="service_question">How was the service?</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="error_message">You need to rate the service first</string>
    <string name="label">Cost of Service</string>
</resources>