<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/shopping_car_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/cost_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_service"
            app:srcCompat="@drawable/baseline_shopping_cart_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_service"
            style="@style/Widget.TipTime.InputLayout"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/label"
            app:layout_constraintStart_toEndOf="@id/shopping_car_icon"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/service_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/service_ask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_ask"
            app:srcCompat="@drawable/baseline_delivery_dining_24" />

        <TextView
            android:id="@+id/service_ask"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/service_question"
            app:layout_constraintStart_toStartOf="@id/cost_service"
            app:layout_constraintTop_toBottomOf="@+id/cost_service"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="68dp" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/cost_service"
            app:layout_constraintTop_toBottomOf="@+id/service_ask"


            >

            <RadioButton
                android:id="@+id/twenty_percent_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amazing_service" />

            <RadioButton
                android:id="@+id/eighteen_percent_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_service" />

            <RadioButton
                android:id="@+id/fifteen_percent_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/okay_service" />
        </RadioGroup>

        <TextView
            android:id="@+id/round_up_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_up_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip_options"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="251dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tip_options"
            app:layout_constraintTop_toBottomOf="@+id/tip_options" />

        <Button
            android:id="@+id/calculate_button"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="@+id/round_up_switch"
            app:layout_constraintStart_toStartOf="@+id/round_up_question"
            app:layout_constraintTop_toBottomOf="@+id/round_up_question" />

        <TextView
            android:id="@+id/tip_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/calculate_button"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button"
            tools:text="Tip amount: 10$" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_message"
            android:textColor="@color/design_default_color_error"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="316dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>